--- a/EnterDrawApp/MainPage.xaml
+++ b/EnterDrawApp/MainPage.xaml
@@ -7,7 +7,18 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,-245,0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="637*"/>
+        </Grid.RowDefinitions>
+        <TextBox Name="firstNameTextBox"  Text="First name" Margin="110,10,148,592" Grid.Row="1"/>
+        <TextBox Name="surNameTextBox" Text="Sur name" Margin="110,50,148,550" Grid.Row="1"/>
+        <TextBox Name="eMailTextBox" Text="E-Mail" Margin="110,92,148,510" Grid.Row="1"/>
+        <TextBox Name="phoneNrTextBox" Text="Phone number" Margin="110,132,148,470" Grid.Row="1"/>
+        <TextBox Name="serialNrTextBox" Text="Serial number" Margin="110,172,148,430" Grid.Row="1"/>
+        <DatePicker Name="dateOfBirthDatePicker" HorizontalAlignment="Left" Margin="113,212,0,0" Grid.Row="1" VerticalAlignment="Top" Header="Date of birth"/>
+        <Button Content="Done" HorizontalAlignment="Left" Margin="113,302,0,0" Grid.Row="1" VerticalAlignment="Top" Click="DoneButton_OnClick"/>
+        
     </Grid>
 </Page>
