Fixed display box so it can display multi line tekst

--- a/EnterDrawApp/MainPage.xaml
+++ b/EnterDrawApp/MainPage.xaml
@@ -16,7 +16,7 @@
             <TextBox x:Name="serialNrTextBox" HorizontalAlignment="Left" GotFocus="TextBox_GotFocus" Text="Serial number" Grid.Row="1" Width="284" Height="50"/>
             <DatePicker x:Name="dateOfBirthDatePicker" HorizontalAlignment="Left"  Grid.Row="1" Header="Date of birth"/>
             <Button Content="Done" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top" Click="DoneButton_OnClick"/>
-            <TextBox x:Name="displayBox" GotFocus="TextBox_GotFocus" Grid.Row="1" Width="284" Height="50"/>
+            <TextBox x:Name="displayBox" TextWrapping="Wrap" GotFocus="TextBox_GotFocus" Grid.Row="1" Width="284" Height="50"/>
         </StackPanel>
 
 
